--- a/division-waterproofing.html
+++ b/division-waterproofing.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Division - Al-Mulhem Contracting</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="https://img.icons8.com/fluency/96/building.png">
+
+    <!-- Primary SEO Meta Tags -->
+    <title>Waterproofing & Concrete Repair | Al-Mulhem Contracting</title>
+    <meta name="description"
+        content="Al-Mulhem's Waterproofing & Concrete Repair division provides building rehabilitation services including advanced waterproofing systems and concrete restoration.">
+    <meta name="keywords"
+        content="waterproofing Saudi Arabia, concrete repair, building rehabilitation, waterproofing systems, Al-Mulhem waterproofing, structure rehabilitation">
+    <meta name="author" content="Al-Mulhem Contracting">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://almulhem.com/division-waterproofing.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://almulhem.com/division-waterproofing.html">
+    <meta property="og:title" content="Waterproofing & Concrete Repair | Al-Mulhem Contracting">
+    <meta property="og:description"
+        content="Advanced waterproofing systems and concrete repair services for building rehabilitation.">
+    <meta property="og:image" content="https://almulhem.com/Images/logo.png">
+    <meta property="og:site_name" content="Al-Mulhem Contracting">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://almulhem.com/division-waterproofing.html">
+    <meta name="twitter:title" content="Waterproofing & Concrete Repair | Al-Mulhem Contracting">
+    <meta name="twitter:description"
+        content="Advanced waterproofing systems and concrete repair services for building rehabilitation.">
+    <meta name="twitter:image" content="https://almulhem.com/Images/logo.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="Images/logo.png">
+    <link rel="apple-touch-icon" href="Images/logo.png">
+
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="main-header">
         <nav class="navbar">
             <div class="container">
                 <div class="logo">
-                    <a href="index.html"><h2 style="color: #1e3a8a; margin: 0;">AL-MULHEM CONTRACTING</h2></a>
+                    <a href="index.html">
+                        <h2 style="color: #1e3a8a; margin: 0;">AL-MULHEM CONTRACTING</h2>
+                    </a>
                 </div>
                 <button class="mobile-menu-toggle"><span></span><span></span><span></span></button>
                 <ul class="nav-menu">
@@ -48,7 +89,9 @@
     <section class="division-overview">
         <div class="container">
             <h2>Professional Construction Solutions</h2>
-            <p>Our specialized division provides comprehensive services using advanced technologies and expert craftsmanship. We deliver innovative solutions that meet the highest standards of quality and performance.</p>
+            <p>Our specialized division provides comprehensive services using advanced technologies and expert
+                craftsmanship. We deliver innovative solutions that meet the highest standards of quality and
+                performance.</p>
         </div>
     </section>
 
@@ -82,7 +125,10 @@
                 <h2>Keep Up With Al-Mulhem</h2>
                 <div class="social-links">
                     <a href="#" aria-label="LinkedIn">
-                        <svg width="20" height="20" fill="white" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                        <svg width="20" height="20" fill="white" viewBox="0 0 24 24">
+                            <path
+                                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                        </svg>
                     </a>
                 </div>
             </div>
@@ -91,7 +137,8 @@
                     <h3>CONTACT</h3>
                     <div class="office-info">
                         <h4>Head Office</h4>
-                        <p>8357 Hail Al Baghdadiyah<br>Al Gharbiyah District<br>City 22234<br><br>Phone: +XXX XXX XXXX<br>Email: info@almulhem.com</p>
+                        <p>8357 Hail Al Baghdadiyah<br>Al Gharbiyah District<br>City 22234<br><br>Phone: +XXX XXX
+                            XXXX<br>Email: info@almulhem.com</p>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -99,8 +146,10 @@
                     <h4>Contact Us</h4>
                     <form id="contactForm">
                         <div class="form-row">
-                            <div class="form-group"><input type="text" id="firstName" placeholder="First Name*" required></div>
-                            <div class="form-group"><input type="text" id="lastName" placeholder="Last Name*" required></div>
+                            <div class="form-group"><input type="text" id="firstName" placeholder="First Name*"
+                                    required></div>
+                            <div class="form-group"><input type="text" id="lastName" placeholder="Last Name*" required>
+                            </div>
                         </div>
                         <div class="form-group"><input type="email" id="email" placeholder="Email*" required></div>
                         <div class="form-group"><input type="text" id="subject" placeholder="Subject"></div>
@@ -113,9 +162,12 @@
     </section>
 
     <footer class="main-footer">
-        <div class="container"><p>&copy; 2025 Al-Mulhem Contracting. All rights reserved.</p></div>
+        <div class="container">
+            <p>&copy; 2025 Al-Mulhem Contracting. All rights reserved.</p>
+        </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
