--- a/divisions.html
+++ b/divisions.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Specialized Divisions | Al-Mulhem Contracting">
     <meta property="og:description"
         content="Explore Al-Mulhem's specialized construction divisions: Precast, Waterproofing, Steel, Landscaping, Industrial, and Fit-Out.">
-    <meta property="og:image" content="https://almulhem.com/Images/logo.png">
+    <meta property="og:image" content="https://almulhem.com/images/brandlogo/logo.png">
     <meta property="og:site_name" content="Al-Mulhem Contracting">
     <meta property="og:locale" content="en_US">
 
@@ -31,11 +31,11 @@
     <meta name="twitter:title" content="Specialized Divisions | Al-Mulhem Contracting">
     <meta name="twitter:description"
         content="Explore Al-Mulhem's specialized construction divisions: Precast, Waterproofing, Steel, Landscaping, Industrial, and Fit-Out.">
-    <meta name="twitter:image" content="https://almulhem.com/Images/logo.png">
+    <meta name="twitter:image" content="https://almulhem.com/images/brandlogo/logo.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="Images/logo.png">
-    <link rel="apple-touch-icon" href="Images/logo.png">
+    <link rel="icon" type="image/png" href="images/brandlogo/logo.png">
+    <link rel="apple-touch-icon" href="images/brandlogo/logo.png">
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold brand-logo d-flex align-items-center gap-2" href="index.html">
-                <img src="Images/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
+                <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
                 <span>AL-MULHEM CONTRACTING</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
@@ -186,7 +186,7 @@
                 <div class="row g-4 g-lg-5">
                     <div class="col-lg-3 col-md-6">
                         <a href="index.html" class="footer-brand d-flex align-items-center gap-2 mb-3">
-                            <img src="Images/logo.png" alt="Al-Mulhem Contracting" class="footer-logo">
+                            <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo">
                             <span>AL-MULHEM CONTRACTING</span>
                         </a>
                         <p class="footer-about text-body small mb-3">Al-Mulhem has more than two decades of combined
