--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Al-Mulhem Contracting | Building Envelope & GFRC Facade Specialists">
     <meta property="og:description"
         content="Leading ISO-certified construction contractor specializing in GFRC facades, architectural composites, and waterproofing systems. Over 4500 projects completed since 2002.">
-    <meta property="og:image" content="https://almulhem.com/Images/logo.png">
+    <meta property="og:image" content="https://almulhem.com/images/brandlogo/logo.png">
     <meta property="og:site_name" content="Al-Mulhem Contracting">
     <meta property="og:locale" content="en_US">
 
@@ -31,11 +31,11 @@
     <meta name="twitter:title" content="Al-Mulhem Contracting | Building Envelope & GFRC Facade Specialists">
     <meta name="twitter:description"
         content="Leading ISO-certified construction contractor specializing in GFRC facades, architectural composites, and waterproofing systems.">
-    <meta name="twitter:image" content="https://almulhem.com/Images/logo.png">
+    <meta name="twitter:image" content="https://almulhem.com/images/brandlogo/logo.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="Images/logo.png">
-    <link rel="apple-touch-icon" href="Images/logo.png">
+    <link rel="icon" type="image/png" href="images/brandlogo/logo.png">
+    <link rel="apple-touch-icon" href="images/brandlogo/logo.png">
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
         "name": "Al-Mulhem Contracting",
         "alternateName": "Al-Mulhem Contracting Company",
         "url": "https://almulhem.com",
-        "logo": "https://almulhem.com/Images/logo.png",
+        "logo": "https://almulhem.com/images/brandlogo/logo.png",
         "description": "Leading construction contractor specializing in GFRC facades, architectural composites, waterproofing systems, and building envelope solutions.",
         "foundingDate": "2002",
         "numberOfEmployees": {
@@ -83,7 +83,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Al-Mulhem Contracting",
-        "image": "https://almulhem.com/Images/logo.png",
+        "image": "https://almulhem.com/images/brandlogo/logo.png",
         "url": "https://almulhem.com",
         "telephone": "",
         "email": "info@almulhem.com",
@@ -105,7 +105,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold brand-logo d-flex align-items-center gap-2" href="index.html">
-                <img src="Images/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
+                <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
                 <span>AL-MULHEM CONTRACTING</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
@@ -732,7 +732,7 @@
                     <!-- Brand column -->
                     <div class="col-lg-3 col-md-6">
                         <a href="index.html" class="footer-brand d-flex align-items-center gap-2 mb-3">
-                            <img src="Images/logo.png" alt="Al-Mulhem Contracting" class="footer-logo">
+                            <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo">
                             <span>AL-MULHEM CONTRACTING</span>
                         </a>
                         <p class="footer-about text-body small mb-3">Al-Mulhem has more than two decades of combined
