--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Key Projects | Al-Mulhem Contracting Portfolio">
     <meta property="og:description"
         content="Explore Al-Mulhem Contracting's portfolio of landmark construction projects across the region.">
-    <meta property="og:image" content="https://almulhem.com/Images/logo.png">
+    <meta property="og:image" content="https://almulhem.com/images/brandlogo/logo.png">
     <meta property="og:site_name" content="Al-Mulhem Contracting">
     <meta property="og:locale" content="en_US">
 
@@ -31,11 +31,11 @@
     <meta name="twitter:title" content="Key Projects | Al-Mulhem Contracting Portfolio">
     <meta name="twitter:description"
         content="Explore Al-Mulhem Contracting's portfolio of landmark construction projects across the region.">
-    <meta name="twitter:image" content="https://almulhem.com/Images/logo.png">
+    <meta name="twitter:image" content="https://almulhem.com/images/brandlogo/logo.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="Images/logo.png">
-    <link rel="apple-touch-icon" href="Images/logo.png">
+    <link rel="icon" type="image/png" href="images/brandlogo/logo.png">
+    <link rel="apple-touch-icon" href="images/brandlogo/logo.png">
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
