--- a/divisions.html
+++ b/divisions.html
@@ -54,7 +54,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom py-3 sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom py-3 fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold brand-logo d-flex align-items-center gap-2" href="index.html">
                 <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
@@ -71,12 +71,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="divisions.html" data-bs-toggle="dropdown" data-i18n="nav.divisions">SPECIALIZED DIVISIONS</a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="division-precast.html" data-i18n="nav.div_precast">Architectural Precast Composites</a></li>
-                            <li><a class="dropdown-item" href="division-waterproofing.html" data-i18n="nav.div_waterproofing">Waterproofing & Concrete Repair</a></li>
-                            <li><a class="dropdown-item" href="division-steel.html" data-i18n="nav.div_steel">Steel Fabrication & Metal Works</a></li>
-                            <li><a class="dropdown-item" href="division-landscaping.html" data-i18n="nav.div_landscaping">Landscaping & Outdoor Development</a></li>
-                            <li><a class="dropdown-item" href="division-industrial.html" data-i18n="nav.div_industrial">Industrial Solutions</a></li>
-                            <li><a class="dropdown-item" href="division-fitout.html" data-i18n="nav.div_fitout">Interior Fit-Out Solutions</a></li>
+                            <li><a class="dropdown-item" href="division/division-precast.html" data-i18n="nav.div_precast">Architectural Precast Composites</a></li>
+                            <li><a class="dropdown-item" href="division/division-waterproofing.html" data-i18n="nav.div_waterproofing">Waterproofing & Concrete Repair</a></li>
+                            <li><a class="dropdown-item" href="division/division-steel.html" data-i18n="nav.div_steel">Steel Fabrication & Metal Works</a></li>
+                            <li><a class="dropdown-item" href="division/division-landscaping.html" data-i18n="nav.div_landscaping">Landscaping & Outdoor Development</a></li>
+                            <li><a class="dropdown-item" href="division/division-industrial.html" data-i18n="nav.div_industrial">Industrial Solutions</a></li>
+                            <li><a class="dropdown-item" href="division/division-fitout.html" data-i18n="nav.div_fitout">Interior Fit-Out Solutions</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#contact" data-i18n="nav.contact">CONTACT</a></li>
@@ -127,7 +127,7 @@
                     <p class="text-body-secondary mb-4">Our Architectural Precast Composites division specializes in the
                         design, manufacturing, and installation of advanced composite materials for building facades and
                         architectural elements.</p>
-                    <a href="division-precast.html" class="btn btn-primary">Explore This Division</a>
+                    <a href="division/division-precast.html" class="btn btn-primary">Explore This Division</a>
                 </div>
             </div>
             <div class="row align-items-center g-4 flex-md-row-reverse">
@@ -139,7 +139,7 @@
                     <p class="text-primary small fw-semibold mb-3">Building Rehabilitation</p>
                     <p class="text-body-secondary mb-4">Our Building Rehabilitation division focuses on protecting and
                         restoring structures through advanced waterproofing systems and concrete repair techniques.</p>
-                    <a href="division-waterproofing.html" class="btn btn-primary">Explore This Division</a>
+                    <a href="division/division-waterproofing.html" class="btn btn-primary">Explore This Division</a>
                 </div>
             </div>
         </div>
@@ -201,11 +201,11 @@
                         <div class="col-6 col-lg-2 col-md-3">
                             <h4 class="footer-heading">INFO</h4>
                             <ul class="footer-links list-unstyled small mb-0">
-                                <li><a href="#">Delivery &amp; Info</a></li>
-                                <li><a href="#">Resources</a></li>
-                                <li><a href="#">Website Terms of Use</a></li>
-                                <li><a href="#">Terms of Trade</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="delivery-info.html">Delivery &amp; Info</a></li>
+                                <li><a href="resources.html">Resources</a></li>
+                                <li><a href="terms-of-use.html">Website Terms of Use</a></li>
+                                <li><a href="terms-of-trade.html">Terms of Trade</a></li>
+                                <li><a href="privacy-policy.html">Privacy Policy</a></li>
                                 <li><a href="about.html">About Us</a></li>
                             </ul>
                         </div>
@@ -213,11 +213,11 @@
                             <h4 class="footer-heading">OUR DIVISIONS</h4>
                             <ul class="footer-links list-unstyled small mb-0">
                                 <li><a href="divisions.html">All Divisions</a></li>
-                                <li><a href="division-precast.html">Precast Composites</a></li>
-                                <li><a href="division-waterproofing.html">Waterproofing</a></li>
-                                <li><a href="division-steel.html">Steel &amp; Metal</a></li>
-                                <li><a href="division-landscaping.html">Landscaping</a></li>
-                                <li><a href="division-fitout.html">Interior Fit-Out</a></li>
+                                <li><a href="division/division-precast.html">Precast Composites</a></li>
+                                <li><a href="division/division-waterproofing.html">Waterproofing</a></li>
+                                <li><a href="division/division-steel.html">Steel &amp; Metal</a></li>
+                                <li><a href="division/division-landscaping.html">Landscaping</a></li>
+                                <li><a href="division/division-fitout.html">Interior Fit-Out</a></li>
                             </ul>
                         </div>
                         <div class="col-6 col-lg-2 col-md-6">
