--- a/division/division-industrial.html
+++ b/division/division-industrial.html
@@ -35,8 +35,8 @@
     <meta name="twitter:image" content="https://www.al-mulhem.com/images/brandlogo/logo.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/brandlogo/logo.png">
-    <link rel="apple-touch-icon" href="images/brandlogo/logo.png">
+    <link rel="icon" type="image/png" href="../Images/brandlogo/logo.png">
+    <link rel="apple-touch-icon" href="../Images/brandlogo/logo.png">
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,7 @@
 
 <body>
     <header class="main-header">
-        <nav class="navbar">
+        <nav class="navbar fixed-top">
             <div class="container">
                 <div class="logo">
                     <a href="../index.html">
