--- a/board.html
+++ b/board.html
@@ -104,17 +104,11 @@
 
     <section class="py-5 bg-light">
         <div class="container py-4">
-            <h2 class="text-center fw-bold text-dark mb-4">Leading with Vision and Expertise</h2>
+            <h2 class="text-center fw-bold text-dark mb-4" data-i18n="board.lead.title">Leading with Vision and Expertise</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <p class="text-body-secondary">Our leadership team brings together decades of combined experience in
-                        construction, engineering, and business management. Each member of our board is committed to
-                        upholding the highest standards of integrity, innovation, and client service. Their diverse
-                        backgrounds and complementary skills enable Al-Mulhem to navigate complex challenges and seize
-                        emerging opportunities in the construction industry.</p>
-                    <p class="text-body-secondary mb-0">Under their guidance, we continue to expand our capabilities,
-                        embrace new technologies, and maintain our reputation as a trusted partner for projects of all
-                        scales and complexities.</p>
+                    <p class="text-body-secondary" data-i18n="board.lead.para1">Our leadership team brings together decades of combined experience in construction, engineering, and business management. Each member of our board is committed to upholding the highest standards of integrity, innovation, and client service. Their diverse backgrounds and complementary skills enable Al-Mulhem to navigate complex challenges and seize emerging opportunities in the construction industry.</p>
+                    <p class="text-body-secondary mb-0" data-i18n="board.lead.para2">Under their guidance, we continue to expand our capabilities, embrace new technologies, and maintain our reputation as a trusted partner for projects of all scales and complexities.</p>
                 </div>
             </div>
         </div>
@@ -122,7 +116,7 @@
 
     <section class="py-4">
         <div class="container py-3">
-            <h2 class="text-center fw-bold text-dark mb-4">Board of Directors</h2>
+            <h2 class="text-center fw-bold text-dark mb-4" data-i18n="board.directors.title">Board of Directors</h2>
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4">
                     <div class="card border-0 shadow-sm h-100 overflow-hidden board-director-card">
@@ -130,9 +124,9 @@
                             <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=600&h=600&fit=crop" class="w-100 object-fit-cover" alt="Abdullah Al-Mulhem - Chairman & CEO">
                         </div>
                         <div class="card-body p-3">
-                            <h3 class="h6 fw-bold text-dark mb-1">Abdullah Al-Mulhem</h3>
-                            <p class="text-primary small fw-semibold mb-2">Chairman &amp; Chief Executive Officer</p>
-                            <p class="board-director-bio text-body-secondary small mb-0">With over 30 years in construction, Abdullah founded Al-Mulhem with a vision to bring world-class solutions to the region. His strategic leadership has established the company as a leading contractor.</p>
+                            <h3 class="h6 fw-bold text-dark mb-1" data-i18n="board.card.ceo_name">Abdullah Al-Mulhem</h3>
+                            <p class="text-primary small fw-semibold mb-2" data-i18n="board.card.ceo_title">Chairman &amp; Chief Executive Officer</p>
+                            <p class="board-director-bio text-body-secondary small mb-0" data-i18n="board.card.ceo_bio">With over 30 years in construction, Abdullah founded Al-Mulhem with a vision to bring world-class solutions to the region. His strategic leadership has established the company as a leading contractor.</p>
                         </div>
                     </div>
                 </div>
@@ -142,9 +136,9 @@
                             <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=300&h=400&fit=crop" class="w-100 object-fit-cover" alt="Mohammed Al-Rashid - Managing Director">
                         </div>
                         <div class="card-body p-3">
-                            <h3 class="h6 fw-bold text-dark mb-1">Mohammed Al-Rashid</h3>
-                            <p class="text-primary small fw-semibold mb-2">Managing Director</p>
-                            <p class="board-director-bio text-body-secondary small mb-0">Mohammed brings 25 years of construction management expertise. He oversees all operational aspects, ensuring seamless project execution and client satisfaction.</p>
+                            <h3 class="h6 fw-bold text-dark mb-1" data-i18n="board.card.md_name">Mohammed Al-Rashid</h3>
+                            <p class="text-primary small fw-semibold mb-2" data-i18n="board.card.md_title">Managing Director</p>
+                            <p class="board-director-bio text-body-secondary small mb-0" data-i18n="board.card.md_bio">Mohammed brings 25 years of construction management expertise. He oversees all operational aspects, ensuring seamless project execution and client satisfaction.</p>
                         </div>
                     </div>
                 </div>
@@ -154,9 +148,9 @@
                             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300&h=400&fit=crop" class="w-100 object-fit-cover" alt="Eng. Khalid Al-Zahrani - Technical Director">
                         </div>
                         <div class="card-body p-3">
-                            <h3 class="h6 fw-bold text-dark mb-1">Eng. Khalid Al-Zahrani</h3>
-                            <p class="text-primary small fw-semibold mb-2">Technical Director</p>
-                            <p class="board-director-bio text-body-secondary small mb-0">Khalid leads our engineering team and drives innovation in construction methodologies. He ensures Al-Mulhem stays at the forefront of industry developments.</p>
+                            <h3 class="h6 fw-bold text-dark mb-1" data-i18n="board.card.td_name">Eng. Khalid Al-Zahrani</h3>
+                            <p class="text-primary small fw-semibold mb-2" data-i18n="board.card.td_title">Technical Director</p>
+                            <p class="board-director-bio text-body-secondary small mb-0" data-i18n="board.card.td_bio">Khalid leads our engineering team and drives innovation in construction methodologies. He ensures Al-Mulhem stays at the forefront of industry developments.</p>
                         </div>
                     </div>
                 </div>
@@ -166,9 +160,9 @@
                             <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=300&h=400&fit=crop" class="w-100 object-fit-cover" alt="Fahad Al-Otaibi - CFO">
                         </div>
                         <div class="card-body p-3">
-                            <h3 class="h6 fw-bold text-dark mb-1">Fahad Al-Otaibi</h3>
-                            <p class="text-primary small fw-semibold mb-2">Chief Financial Officer</p>
-                            <p class="board-director-bio text-body-secondary small mb-0">Fahad oversees financial operations, strategic planning, and business development. His acumen has helped maintain stability while pursuing growth.</p>
+                            <h3 class="h6 fw-bold text-dark mb-1" data-i18n="board.card.cfo_name">Fahad Al-Otaibi</h3>
+                            <p class="text-primary small fw-semibold mb-2" data-i18n="board.card.cfo_title">Chief Financial Officer</p>
+                            <p class="board-director-bio text-body-secondary small mb-0" data-i18n="board.card.cfo_bio">Fahad oversees financial operations, strategic planning, and business development. His acumen has helped maintain stability while pursuing growth.</p>
                         </div>
                     </div>
                 </div>
@@ -178,9 +172,9 @@
                             <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=300&h=400&fit=crop" class="w-100 object-fit-cover" alt="Eng. Saud Al-Ghamdi - Director of Operations">
                         </div>
                         <div class="card-body p-3">
-                            <h3 class="h6 fw-bold text-dark mb-1">Eng. Saud Al-Ghamdi</h3>
-                            <p class="text-primary small fw-semibold mb-2">Director of Operations</p>
-                            <p class="board-director-bio text-body-secondary small mb-0">Saud manages day-to-day operations and coordinates divisions for efficient resource allocation and timely project delivery.</p>
+                            <h3 class="h6 fw-bold text-dark mb-1" data-i18n="board.card.ops_name">Eng. Saud Al-Ghamdi</h3>
+                            <p class="text-primary small fw-semibold mb-2" data-i18n="board.card.ops_title">Director of Operations</p>
+                            <p class="board-director-bio text-body-secondary small mb-0" data-i18n="board.card.ops_bio">Saud manages day-to-day operations and coordinates divisions for efficient resource allocation and timely project delivery.</p>
                         </div>
                     </div>
                 </div>
@@ -190,9 +184,9 @@
                             <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=300&h=400&fit=crop" class="w-100 object-fit-cover" alt="Eng. Nasser Al-Dosari - Director of Quality & Safety">
                         </div>
                         <div class="card-body p-3">
-                            <h3 class="h6 fw-bold text-dark mb-1">Eng. Nasser Al-Dosari</h3>
-                            <p class="text-primary small fw-semibold mb-2">Director of Quality &amp; Safety</p>
-                            <p class="board-director-bio text-body-secondary small mb-0">Nasser maintains the highest standards of quality and safety across all projects, earning industry recognition for excellence.</p>
+                            <h3 class="h6 fw-bold text-dark mb-1" data-i18n="board.card.qs_name">Eng. Nasser Al-Dosari</h3>
+                            <p class="text-primary small fw-semibold mb-2" data-i18n="board.card.qs_title">Director of Quality &amp; Safety</p>
+                            <p class="board-director-bio text-body-secondary small mb-0" data-i18n="board.card.qs_bio">Nasser maintains the highest standards of quality and safety across all projects, earning industry recognition for excellence.</p>
                         </div>
                     </div>
                 </div>
@@ -429,7 +423,7 @@
                                 <h4 class="contact-info-title text-white" data-i18n="footer.contact_info">Contact <span class="accent">INFO</span></h4>
                                 <div class="contact-info-item">
                                     <svg width="18" height="18" fill="#324A93" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
-                                    <span>Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span>
+                                    <span data-i18n="contact.address_oneline">Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span>
                                 </div>
                                 <div class="contact-info-item">
                                     <a href="tel:+9665666216302" class="contact-info-phone-btn">
@@ -466,10 +460,11 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/translations.js"></script>
-    <script src="js/lang.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="js/translations.js" defer></script>
+    <script src="js/lang.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/sw-register.js" defer></script>
 </body>
 
 </html>
