--- a/divisions.html
+++ b/divisions.html
@@ -103,13 +103,10 @@
 
     <section class="py-5 bg-light">
         <div class="container py-4">
-            <h2 class="text-center fw-bold text-dark mb-4">Integrated Expertise Across Multiple Disciplines</h2>
+            <h2 class="text-center fw-bold text-dark mb-4" data-i18n="divisions.intro.title">Integrated Expertise Across Multiple Disciplines</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <p class="text-body-secondary mb-0">Al-Mulhem Contracting has developed specialized divisions to
-                        provide comprehensive construction solutions. Each division is staffed with expert
-                        professionals, equipped with state-of-the-art facilities, and supported by years of industry
-                        experience.</p>
+                    <p class="text-body-secondary mb-0" data-i18n="divisions.intro.lead">Al-Mulhem Contracting has developed specialized divisions to provide comprehensive construction solutions. Each division is staffed with expert professionals, equipped with state-of-the-art facilities, and supported by years of industry experience.</p>
                 </div>
             </div>
         </div>
@@ -122,12 +119,10 @@
                         src="https://static.wixstatic.com/media/ea3b8b_2aeaf677e2994db29e837c63d0935b34~mv2.jpg/v1/fill/w_600,h_400,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/DSC00105_JPG.jpg"
                         alt="Precast" class="rounded shadow w-100"></div>
                 <div class="col-lg-6">
-                    <h2 class="fw-bold text-dark mb-2">Architectural Precast Composites</h2>
-                    <p class="text-primary small fw-semibold mb-3">GFRC - UHPC - FRP - GRG</p>
-                    <p class="text-body-secondary mb-4">Our Architectural Precast Composites division specializes in the
-                        design, manufacturing, and installation of advanced composite materials for building facades and
-                        architectural elements.</p>
-                    <a href="division/division-precast.html" class="btn btn-primary">Explore This Division</a>
+                    <h2 class="fw-bold text-dark mb-2" data-i18n="divisions.precast.title">Architectural Precast Composites</h2>
+                    <p class="text-primary small fw-semibold mb-3" data-i18n="divisions.precast.sub">GFRC - UHPC - FRP - GRG</p>
+                    <p class="text-body-secondary mb-4" data-i18n="divisions.precast.para">Our Architectural Precast Composites division specializes in the design, manufacturing, and installation of advanced composite materials for building facades and architectural elements.</p>
+                    <a href="division/division-precast.html" class="btn btn-primary" data-i18n="divisions.explore_btn">Explore This Division</a>
                 </div>
             </div>
             <div class="row align-items-center g-4 flex-md-row-reverse">
@@ -135,11 +130,10 @@
                         src="https://static.wixstatic.com/media/ea3b8b_fcbfbe997d6b4a6c99fd3ed6fc07a3af~mv2.png/v1/crop/x_98,y_11,w_1425,h_1050/fill/w_600,h_400,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/Screen%20Shot%202024-11-24%20at%204_27_59%20PM.png"
                         alt="Waterproofing" class="rounded shadow w-100"></div>
                 <div class="col-lg-6 order-lg-1">
-                    <h2 class="fw-bold text-dark mb-2">Waterproofing & Concrete Repair</h2>
-                    <p class="text-primary small fw-semibold mb-3">Building Rehabilitation</p>
-                    <p class="text-body-secondary mb-4">Our Building Rehabilitation division focuses on protecting and
-                        restoring structures through advanced waterproofing systems and concrete repair techniques.</p>
-                    <a href="division/division-waterproofing.html" class="btn btn-primary">Explore This Division</a>
+                    <h2 class="fw-bold text-dark mb-2" data-i18n="divisions.waterproofing.title">Waterproofing & Concrete Repair</h2>
+                    <p class="text-primary small fw-semibold mb-3" data-i18n="divisions.waterproofing.sub">Building Rehabilitation</p>
+                    <p class="text-body-secondary mb-4" data-i18n="divisions.waterproofing.para">Our Building Rehabilitation division focuses on protecting and restoring structures through advanced waterproofing systems and concrete repair techniques.</p>
+                    <a href="division/division-waterproofing.html" class="btn btn-primary" data-i18n="divisions.explore_btn">Explore This Division</a>
                 </div>
             </div>
         </div>
@@ -153,15 +147,15 @@
             <div class="row g-5 align-items-start">
                 <div class="col-lg-4 contact-company-details">
                     <p class="fw-bold text-dark mb-2" data-i18n="contact.company">Al-Mulhem Contracting</p>
-                    <p class="text-body-secondary mb-2">Al-Rehab Dist, St 9054<br>Jeddah, Kingdom of Saudi Arabia</p>
-                    <p class="text-body-secondary mb-2">Phone: <a href="tel:+9665666216302">+966 56 662 16302</a></p>
-                    <p class="text-body-secondary mb-0">Email: <a href="mailto:sales.riyadh@al-mulhem.com">sales.riyadh@al-mulhem.com</a></p>
-                    <p class="text-body-secondary mb-0 mt-2">Website: <a href="https://www.al-mulhem.com">www.al-mulhem.com</a></p>
+                    <p class="text-body-secondary mb-2" data-i18n="contact.address">Al-Rehab Dist, St 9054<br>Jeddah, Kingdom of Saudi Arabia</p>
+                    <p class="text-body-secondary mb-2"><span data-i18n="contact.phone_label">Phone:</span> <a href="tel:+9665666216302">+966 56 662 16302</a></p>
+                    <p class="text-body-secondary mb-0"><span data-i18n="contact.email_label">Email:</span> <a href="mailto:sales.riyadh@al-mulhem.com">sales.riyadh@al-mulhem.com</a></p>
+                    <p class="text-body-secondary mb-0 mt-2"><span data-i18n="contact.website_label">Website:</span> <a href="https://www.al-mulhem.com">www.al-mulhem.com</a></p>
                 </div>
                 <div class="col-lg-8">
                     <div class="contact-form-wrap lead-form-wrap">
                         <h3 class="lead-form-title mb-4" data-i18n="leadform.title.divisions">Inquire About Our Divisions</h3>
-                        <p class="lead-form-desc small opacity-90 mb-4">Tell us which division or service you need and we’ll follow up.</p>
+                        <p class="lead-form-desc small opacity-90 mb-4" data-i18n="leadform.desc.divisions">Tell us which division or service you need and we’ll follow up.</p>
                         <form id="contactForm" class="lead-form row g-3">
                             <input type="hidden" id="sourcePage" name="sourcePage" value="divisions">
                             <div class="col-md-6">
@@ -264,7 +258,7 @@
                                 <h4 class="contact-info-title text-white" data-i18n="footer.contact_info">Contact <span class="accent">INFO</span></h4>
                                 <div class="contact-info-item">
                                     <svg width="18" height="18" fill="#324A93" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
-                                    <span>Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span>
+                                    <span data-i18n="contact.address_oneline">Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span>
                                 </div>
                                 <div class="contact-info-item">
                                     <a href="tel:+9665666216302" class="contact-info-phone-btn">
@@ -301,10 +295,11 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/translations.js"></script>
-    <script src="js/lang.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="js/translations.js" defer></script>
+    <script src="js/lang.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/sw-register.js" defer></script>
 </body>
 
 </html>
