--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <script>
         (function() {
@@ -199,7 +200,7 @@
         <!-- Address & Contact overlay (bottom left) -->
         <div class="main-hero-overlay-box position-absolute start-0 bottom-0 m-4 p-4 rounded-3">
             <p class="main-hero-address text-white mb-2" data-i18n="index.hero.head_office">Head Office:</p>
-            <p class="text-white mb-2 opacity-90" style="font-size: 0.875rem;">Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</p>
+            <p class="text-white mb-2 opacity-90" style="font-size: 0.875rem;" data-i18n="contact.address_oneline">Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</p>
             <p class="text-white mb-3 opacity-90" style="font-size: 0.875rem;" data-i18n="index.hero.hours">Monday – Friday, 9am – 5pm</p>
             <a href="#contact" class="btn btn-primary btn-sm px-4 py-2" data-i18n="index.hero.contact_now">Contact now</a>
         </div>
@@ -324,7 +325,7 @@
         <div class="container py-4">
             <h2 class="text-center fw-bold text-dark mb-2" data-i18n="index.section.projects">KEY PROJECTS</h2>
             <p class="text-center text-body-secondary col-lg-7 mx-auto mb-4" data-i18n="index.projects.lead">Explore our portfolio of landmark projects across commercial, residential, and hospitality sectors.</p>
-            <div class="projects-slider d-flex gap-3 overflow-auto pb-3 mb-3" style="scroll-behavior: smooth;">
+            <div class="projects-slider d-flex gap-3 overflow-auto pb-3 mb-3">
                 <a href="projects.html" class="project-item flex-shrink-0 position-relative rounded overflow-hidden text-decoration-none"
                     style="min-width: 300px;">
                     <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?w=400&h=300&fit=crop"
@@ -852,7 +853,7 @@
                     <p class="fw-bold text-dark mb-3" data-i18n="contact.company">Al-Mulhem Contracting</p>
                     <p class="text-body-secondary mb-3 d-flex align-items-start gap-2">
                         <i class="bi bi-geo-alt-fill text-primary flex-shrink-0 mt-1" aria-hidden="true"></i>
-                        <span>Al-Rehab Dist, St 9054<br>Jeddah, Kingdom of Saudi Arabia</span>
+                        <span data-i18n="contact.address">Al-Rehab Dist, St 9054<br>Jeddah, Kingdom of Saudi Arabia</span>
                     </p>
                     <p class="text-body-secondary mb-3 d-flex align-items-center gap-2">
                         <i class="bi bi-telephone-fill text-primary flex-shrink-0" aria-hidden="true"></i>
@@ -870,7 +871,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-wrap lead-form-wrap">
                         <h3 class="lead-form-title mb-4" data-i18n="leadform.title.home">Get in Touch</h3>
-                        <p class="lead-form-desc small opacity-90 mb-4">Share your details and we’ll get back to you.</p>
+                        <p class="lead-form-desc small opacity-90 mb-4" data-i18n="leadform.desc.home">Share your details and we’ll get back to you.</p>
                         <form id="contactForm" class="lead-form row g-3">
                             <input type="hidden" id="sourcePage" name="sourcePage" value="home">
                             <div class="col-md-6">
@@ -977,7 +978,7 @@
                                 <h4 class="contact-info-title text-white" data-i18n="footer.contact_info">Contact <span class="accent">INFO</span></h4>
                                 <div class="contact-info-item">
                                     <svg width="18" height="18" fill="#324A93" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
-                                    <span>Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span>
+                                    <span data-i18n="contact.address_oneline">Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span>
                                 </div>
                                 <div class="contact-info-item">
                                     <a href="tel:+9665666216302" class="contact-info-phone-btn">
@@ -1036,10 +1037,11 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/translations.js"></script>
-    <script src="js/lang.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="js/translations.js" defer></script>
+    <script src="js/lang.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/sw-register.js" defer></script>
 </body>
 
 </html>
