--- a/resources.html
+++ b/resources.html
@@ -151,7 +151,7 @@
                             <div class="col-12 col-md-4 col-lg-6">
                                 <div class="footer-contact-info-box">
                                     <h4 class="contact-info-title text-white" data-i18n="footer.contact_info">Contact <span class="accent">INFO</span></h4>
-                                    <div class="contact-info-item"><svg width="18" height="18" fill="#324A93" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg><span>Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span></div>
+                                    <div class="contact-info-item"><svg width="18" height="18" fill="#324A93" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg><span data-i18n="contact.address_oneline">Al-Rehab Dist, St 9054, Jeddah, Kingdom of Saudi Arabia</span></div>
                                     <div class="contact-info-item"><a href="tel:+9665666216302" class="contact-info-phone-btn"><svg width="18" height="18" fill="currentColor" viewBox="0 0 24 24"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>+966 56 662 16302</a></div>
                                     <div class="contact-info-item"><svg width="18" height="18" fill="#e2e8f0" viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg><a href="mailto:sales.riyadh@al-mulhem.com">sales.riyadh@al-mulhem.com</a></div>
                                 </div>
@@ -179,10 +179,11 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/translations.js"></script>
-    <script src="js/lang.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="js/translations.js" defer></script>
+    <script src="js/lang.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/sw-register.js" defer></script>
 </body>
 
 </html>
