--- a/resources.html
+++ b/resources.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://www.al-mulhem.com/resources.html">
     <meta property="og:title" content="Resources | Al-Mulhem Contracting">
     <meta property="og:description" content="Resources, divisions, projects, and useful links from Al-Mulhem Contracting.">
-    <meta property="og:image" content="https://www.al-mulhem.com/images/brandlogo/logo.png">
+    <meta property="og:image" content="https://www.al-mulhem.com/Images/brandlogo/logo.png">
     <meta property="og:site_name" content="Al-Mulhem Contracting">
     <meta property="og:locale" content="en_US">
 
@@ -26,10 +26,10 @@
     <meta name="twitter:url" content="https://www.al-mulhem.com/resources.html">
     <meta name="twitter:title" content="Resources | Al-Mulhem Contracting">
     <meta name="twitter:description" content="Resources, divisions, projects, and useful links from Al-Mulhem Contracting.">
-    <meta name="twitter:image" content="https://www.al-mulhem.com/images/brandlogo/logo.png">
+    <meta name="twitter:image" content="https://www.al-mulhem.com/Images/brandlogo/logo.png">
 
-    <link rel="icon" type="image/png" href="images/brandlogo/logo.png">
-    <link rel="apple-touch-icon" href="images/brandlogo/logo.png">
+    <link rel="icon" type="image/png" href="Images/brandlogo/logo.png">
+    <link rel="apple-touch-icon" href="Images/brandlogo/logo.png">
     <link rel="manifest" href="manifest.json">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom py-3 fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold brand-logo d-flex align-items-center gap-2" href="index.html">
-                <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
+                <img src="Images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
                 <span class="navbar-brand-text d-none d-lg-inline" data-i18n="brand.name">AL-MULHEM CONTRACTING</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -128,7 +128,7 @@
                 <div class="row g-4 g-lg-5">
                     <div class="col-lg-3 col-md-6">
                         <a href="index.html" class="footer-brand d-flex align-items-center gap-2 mb-3">
-                            <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo" loading="lazy">
+                            <img src="Images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo" loading="lazy">
                             <span data-i18n="brand.name">AL-MULHEM CONTRACTING</span>
                         </a>
                         <p class="footer-about text-body small mb-3" data-i18n="footer.about">Al-Mulhem has more than two decades of combined experience and we value the traditions of the past. We also keep our vision firmly placed on the here and now—delivering excellence in building envelope and facade construction.</p>
