--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
     <title>Page Not Found | Al-Mulhem Contracting</title>
     <meta name="description" content="The page you are looking for could not be found. Return to Al-Mulhem Contracting homepage.">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="icon" type="image/png" href="images/brandlogo/logo.png">
-    <link rel="apple-touch-icon" href="images/brandlogo/logo.png">
+    <link rel="icon" type="image/png" href="Images/brandlogo/logo.png">
+    <link rel="apple-touch-icon" href="Images/brandlogo/logo.png">
     <link rel="manifest" href="manifest.json">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom py-3 fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold brand-logo d-flex align-items-center gap-2" href="index.html">
-                <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
+                <img src="Images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
                 <span class="navbar-brand-text d-none d-lg-inline" data-i18n="brand.name">AL-MULHEM CONTRACTING</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"><span class="navbar-toggler-icon"></span></button>
@@ -82,7 +82,7 @@
                     <!-- Brand column -->
                     <div class="col-lg-3 col-md-6">
                         <a href="index.html" class="footer-brand d-flex align-items-center gap-2 mb-3">
-                            <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo" loading="lazy">
+                            <img src="Images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo" loading="lazy">
                             <span data-i18n="brand.name">AL-MULHEM CONTRACTING</span>
                         </a>
                         <p class="footer-about text-body small mb-3" data-i18n="footer.about">Al-Mulhem has more than two decades of combined experience and we value the traditions of the past. We also keep our vision firmly placed on the here and now—delivering excellence in building envelope and facade construction.</p>
