--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Al-Mulhem Contracting | Building Envelope & GFRC Facade Specialists">
     <meta property="og:description"
         content="Leading ISO-certified construction contractor specializing in GFRC facades, architectural composites, and waterproofing systems. Over 4500 projects completed since 2002.">
-    <meta property="og:image" content="https://www.al-mulhem.com/images/brandlogo/logo.png">
+    <meta property="og:image" content="https://www.al-mulhem.com/Images/brandlogo/logo.png">
     <meta property="og:site_name" content="Al-Mulhem Contracting">
     <meta property="og:locale" content="en_US">
 
@@ -33,11 +33,11 @@
     <meta name="twitter:title" content="Al-Mulhem Contracting | Building Envelope & GFRC Facade Specialists">
     <meta name="twitter:description"
         content="Leading ISO-certified construction contractor specializing in GFRC facades, architectural composites, and waterproofing systems.">
-    <meta name="twitter:image" content="https://www.al-mulhem.com/images/brandlogo/logo.png">
+    <meta name="twitter:image" content="https://www.al-mulhem.com/Images/brandlogo/logo.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/brandlogo/logo.png" sizes="any">
-    <link rel="apple-touch-icon" href="images/brandlogo/logo.png">
+    <link rel="icon" type="image/png" href="Images/brandlogo/logo.png" sizes="any">
+    <link rel="apple-touch-icon" href="Images/brandlogo/logo.png">
     <link rel="manifest" href="manifest.json">
 
     <!-- Bootstrap 5 CSS -->
@@ -65,7 +65,7 @@
         "name": "Al-Mulhem Contracting",
         "alternateName": "Al-Mulhem Contracting Company",
         "url": "https://www.al-mulhem.com",
-        "logo": "https://www.al-mulhem.com/images/brandlogo/logo.png",
+        "logo": "https://www.al-mulhem.com/Images/brandlogo/logo.png",
         "description": "Leading construction contractor specializing in GFRC facades, architectural composites, waterproofing systems, and building envelope solutions.",
         "foundingDate": "2002",
         "numberOfEmployees": {
@@ -97,7 +97,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Al-Mulhem Contracting",
-        "image": "https://www.al-mulhem.com/images/brandlogo/logo.png",
+        "image": "https://www.al-mulhem.com/Images/brandlogo/logo.png",
         "url": "https://www.al-mulhem.com",
         "telephone": "+966 56 662 16302",
         "email": "sales.riyadh@al-mulhem.com",
@@ -131,7 +131,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom py-3 fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold brand-logo d-flex align-items-center gap-2" href="index.html">
-                <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
+                <img src="Images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="navbar-logo">
                 <span class="navbar-brand-text d-none d-lg-inline" data-i18n="brand.name">AL-MULHEM CONTRACTING</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
@@ -212,7 +212,7 @@
                 <div class="hero-split-pattern" aria-hidden="true"></div>
                 <div class="hero-split-content">
                     <div class="hero-split-logo">
-                        <!-- <img src="images/brandlogo/logo.png" alt="Al-Mulhem" class="hero-split-logo-img"> -->
+                        <!-- <img src="Images/brandlogo/logo.png" alt="Al-Mulhem" class="hero-split-logo-img"> -->
                         <span class="hero-split-logo-text" data-i18n="index.hero_split.logo_text">AL MULHEM</span>
                     </div>
                     <h1 class="hero-split-headline">
@@ -1020,7 +1020,7 @@
                     <!-- Brand column -->
                     <div class="col-lg-3 col-md-6">
                         <a href="index.html" class="footer-brand d-flex align-items-center gap-2 mb-3">
-                            <img src="images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo" loading="lazy">
+                            <img src="Images/brandlogo/logo.png" alt="Al-Mulhem Contracting" class="footer-logo" loading="lazy">
                             <span data-i18n="brand.name">AL-MULHEM CONTRACTING</span>
                         </a>
                         <p class="footer-about text-body small mb-3" data-i18n="footer.about">Al-Mulhem has more than two decades of combined experience and we value the traditions of the past. We also keep our vision firmly placed on the here and now—delivering excellence in building envelope and facade construction.</p>
