--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     <!-- Headline above split hero -->
     <section class="py-4 bg-light">
         <div class="container py-2">
-            <h1 class="intro-headline text-center fw-bold mb-4"><span data-i18n="index.intro.line1">YOUR VISION, OUR EXPERTISE.</span><br><span data-i18n="index.intro.line2">THE PERFECT PARTNERSHIP FOR YOUR CONSTRUCTION NEEDS.</span></h1>
-            <h2 class="text-center fw-bold text-dark mb-4" data-i18n="index.intro.tagline">Al-Mulhem - Building Trust.</h2>
+            <h1 class="intro-headline text-center fw-bold mb-4"><span data-i18n="index.intro.line1">BUILT ON PRECISION. DRIVEN BY PERFORMANCE.</span><br><span data-i18n="index.intro.line2">RELIABLE SOLUTIONS FOR COMPLEX CONSTRUCTION PROJECTS.</span></h1>
+            <h2 class="text-center fw-bold text-dark mb-4" data-i18n="index.intro.tagline">Al-Mulhem – Building Trust.</h2>
         </div>
     </section>
 
